kitti benchmark test

--- a/config/euroc.yaml
+++ b/config/euroc.yaml
@@ -8,6 +8,12 @@ type_of_cam: 1
 image_width: 752
 image_height: 480
 
+T_init:
+[0, 0, 1, 0,
+ -1, 0, 0, 0,
+ 0, -1, 0, 0,
+ 0, 0, 0, 1]
+
 T_imu_mavimu:
 [ 0.0,  0.0,  1.0,  0.0,
   0.0, -1.0,  0.0,  0.0,
