--- a/config/kitti_1241.yaml
+++ b/config/kitti_1241.yaml
@@ -8,6 +8,12 @@ type_of_cam: 0
 image_width: 1241
 image_height: 376
 
+T_init:
+[1, 0, 0, 0,
+ 0, 1, 0, 0,
+ 0, 0, 1, 0,
+ 0, 0, 0, 1]
+
 #imu, not used
 T_world_body:
 [ 1.0,  0.0,  0.0,  0.0,
