--- a/config/vo_params_euroc.yaml
+++ b/config/vo_params_euroc.yaml
@@ -26,4 +26,5 @@ feature.nFeatures: 5 # default 50
 sopvo.sosEnableFlag: 1 # default 1 (enable)
 sopvo.sosAlphaForR: 0.01 # default 0.0001
 sopvo.sosBetaForT: 0.5 # default 0.5
+sopvo.maxIter: 100
 
