gazebo simulation update

--- a/config/e2es_sim.yaml
+++ b/config/e2es_sim.yaml
@@ -7,6 +7,12 @@ type_of_cam: 0
 image_width: 640
 image_height: 360
 
+T_init:
+[0, 0, 1, 0,
+ -1, 0, 0, 0,
+ 0, -1, 0, 0,
+ 0, 0, 0, 1]
+
 T_world_body:
 [ 1.0,  0.0,  0.0,  0.0,
   0.0,  1.0,  0.0,  0.0,
