--- a/config/e2es_sim.yaml
+++ b/config/e2es_sim.yaml
@@ -19,6 +19,12 @@ T_world_body:
   0.0,  0.0,  1.0,  0.0,
   0.0,  0.0,  0.0,  1.0]
 
+#T_world_body:
+#[0, 0, 1, 0,
+# -1, 0, 0, 0,
+# 0, -1, 0, 0,
+# 0, 0, 0, 1]
+
 cam0_intrinsics: [343.4963684082031, 343.4963684082031, 320, 180] #fx fy cx cy
 cam0_distortion_coeffs: [0.0, 0.0, 0.0, 0.0] #k1 k2 r1 r2
 T_body_cam0:
@@ -32,8 +38,4 @@ T_cam0_cam1:
   0.0,  1.0,  0.0,   0.0,
   0.0,  0.0,  1.0,   0.0,
   0.0,  0.0,  0.0,   1.0]
-
-frame_id: map
-run_rviz: true
-
 
